--- a/config/itermtheme.settings
+++ b/config/itermtheme.settings
@@ -5,209 +5,209 @@
 	<key>Ansi 0 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.20000000000000001</real>
+		<real>0.0</real>
 		<key>Green Component</key>
-		<real>0.18431372549019609</real>
+		<real>0.0</real>
 		<key>Red Component</key>
-		<real>0.17254901960784313</real>
+		<real>0.0</real>
 	</dict>
 	<key>Ansi 1 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.31372549019607843</real>
+		<real>0.47843137254901957</real>
 		<key>Green Component</key>
-		<real>0.29803921568627451</real>
+		<real>0.46666666666666667</real>
 		<key>Red Component</key>
-		<real>0.69019607843137254</real>
+		<real>0.94901960784313721</real>
 	</dict>
 	<key>Ansi 10 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.35686274509803922</real>
+		<real>0.59999999999999998</real>
 		<key>Green Component</key>
-		<real>0.59607843137254901</real>
+		<real>0.80000000000000004</real>
 		<key>Red Component</key>
-		<real>0.58039215686274515</real>
+		<real>0.59999999999999998</real>
 	</dict>
 	<key>Ansi 11 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.36078431372549019</real>
+		<real>0.40000000000000002</real>
 		<key>Green Component</key>
-		<real>0.59999999999999998</real>
+		<real>0.80000000000000004</real>
 		<key>Red Component</key>
-		<real>0.88627450980392153</real>
+		<real>1</real>
 	</dict>
 	<key>Ansi 12 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.61568627450980395</real>
+		<real>0.80000000000000004</real>
 		<key>Green Component</key>
-		<real>0.53725490196078429</real>
+		<real>0.59999999999999998</real>
 		<key>Red Component</key>
 		<real>0.40000000000000002</real>
 	</dict>
 	<key>Ansi 13 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.58039215686274515</real>
+		<real>0.80000000000000004</real>
 		<key>Green Component</key>
-		<real>0.39215686274509803</real>
+		<real>0.59999999999999998</real>
 		<key>Red Component</key>
-		<real>0.55294117647058827</real>
+		<real>0.80000000000000004</real>
 	</dict>
 	<key>Ansi 14 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.46666666666666667</real>
+		<real>0.80000000000000004</real>
 		<key>Green Component</key>
-		<real>0.48627450980392156</real>
+		<real>0.80000000000000004</real>
 		<key>Red Component</key>
-		<real>0.32156862745098042</real>
+		<real>0.40000000000000002</real>
 	</dict>
 	<key>Ansi 15 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.86401049146413911</real>
+		<real>0.99999129772186279</real>
 		<key>Green Component</key>
-		<real>0.88853930995475117</real>
+		<real>0.99997437000274658</real>
 		<key>Red Component</key>
-		<real>0.86541474540083896</real>
+		<real>1</real>
 	</dict>
 	<key>Ansi 2 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.32156862745098042</real>
+		<real>0.59999999999999998</real>
 		<key>Green Component</key>
-		<real>0.58823529411764708</real>
+		<real>0.80000000000000004</real>
 		<key>Red Component</key>
-		<real>0.56862745098039214</real>
+		<real>0.59999999999999998</real>
 	</dict>
 	<key>Ansi 3 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.36078431372549019</real>
+		<real>0.40000000000000002</real>
 		<key>Green Component</key>
-		<real>0.59999999999999998</real>
+		<real>0.80000000000000004</real>
 		<key>Red Component</key>
-		<real>0.88627450980392153</real>
+		<real>1</real>
 	</dict>
 	<key>Ansi 4 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.61568627450980395</real>
+		<real>0.80000000000000004</real>
 		<key>Green Component</key>
-		<real>0.53725490196078429</real>
+		<real>0.59999999999999998</real>
 		<key>Red Component</key>
 		<real>0.40000000000000002</real>
 	</dict>
 	<key>Ansi 5 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.58039215686274515</real>
+		<real>0.80000000000000004</real>
 		<key>Green Component</key>
-		<real>0.39215686274509803</real>
+		<real>0.59999999999999998</real>
 		<key>Red Component</key>
-		<real>0.55294117647058827</real>
+		<real>0.80000000000000004</real>
 	</dict>
 	<key>Ansi 6 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.46666666666666667</real>
+		<real>0.80000000000000004</real>
 		<key>Green Component</key>
-		<real>0.48627450980392156</real>
+		<real>0.80000000000000004</real>
 		<key>Red Component</key>
-		<real>0.32156862745098042</real>
+		<real>0.40000000000000002</real>
 	</dict>
 	<key>Ansi 7 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.71764705882352942</real>
+		<real>0.99999129772186279</real>
 		<key>Green Component</key>
-		<real>0.73333333333333328</real>
+		<real>0.99997437000274658</real>
 		<key>Red Component</key>
-		<real>0.71764705882352942</real>
+		<real>1</real>
 	</dict>
 	<key>Ansi 8 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.33722779977375561</real>
+		<real>0.0</real>
 		<key>Green Component</key>
-		<real>0.3119416962254456</real>
+		<real>0.0</real>
 		<key>Red Component</key>
-		<real>0.2921947581590823</real>
+		<real>0.0</real>
 	</dict>
 	<key>Ansi 9 Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.31372549019607843</real>
+		<real>0.47843137250000001</real>
 		<key>Green Component</key>
-		<real>0.29803921568627451</real>
+		<real>0.46666666670000001</real>
 		<key>Red Component</key>
-		<real>0.69019607843137254</real>
+		<real>0.94901960780000005</real>
 	</dict>
 	<key>Background Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.12941176470588237</real>
+		<real>0.1764705882352941</real>
 		<key>Green Component</key>
-		<real>0.12156862745098039</real>
+		<real>0.1764705882352941</real>
 		<key>Red Component</key>
-		<real>0.11372549019607843</real>
+		<real>0.1764705882352941</real>
 	</dict>
 	<key>Bold Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.71764705882352942</real>
+		<real>0.80000000000000004</real>
 		<key>Green Component</key>
-		<real>0.73333333333333328</real>
+		<real>0.80000000000000004</real>
 		<key>Red Component</key>
-		<real>0.71764705882352942</real>
+		<real>0.80000000000000004</real>
 	</dict>
 	<key>Cursor Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.71764705882352942</real>
+		<real>0.80000000000000004</real>
 		<key>Green Component</key>
-		<real>0.73333333333333328</real>
+		<real>0.80000000000000004</real>
 		<key>Red Component</key>
-		<real>0.71764705882352942</real>
+		<real>0.80000000000000004</real>
 	</dict>
 	<key>Cursor Text Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.12941176470588237</real>
+		<real>0.1764705882</real>
 		<key>Green Component</key>
-		<real>0.12156862745098039</real>
+		<real>0.1764705882</real>
 		<key>Red Component</key>
-		<real>0.11372549019607843</real>
+		<real>0.1764705882</real>
 	</dict>
 	<key>Foreground Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.71764705882352942</real>
+		<real>0.80000000000000004</real>
 		<key>Green Component</key>
-		<real>0.73333333333333328</real>
+		<real>0.80000000000000004</real>
 		<key>Red Component</key>
-		<real>0.71764705882352942</real>
+		<real>0.80000000000000004</real>
 	</dict>
 	<key>Selected Text Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.71764705882352942</real>
+		<real>0.80000000000000004</real>
 		<key>Green Component</key>
-		<real>0.73333333333333328</real>
+		<real>0.80000000000000004</real>
 		<key>Red Component</key>
-		<real>0.71764705882352942</real>
+		<real>0.80000000000000004</real>
 	</dict>
 	<key>Selection Color</key>
 	<dict>
 		<key>Blue Component</key>
-		<real>0.2196078431372549</real>
+		<real>0.31764705882352939</real>
 		<key>Green Component</key>
-		<real>0.20000000000000001</real>
+		<real>0.31764705882352939</real>
 		<key>Red Component</key>
-		<real>0.18823529411764706</real>
+		<real>0.31764705882352939</real>
 	</dict>
 </dict>
 </plist>
