--- a/config/vscode.settings
+++ b/config/vscode.settings
@@ -2,7 +2,7 @@
   // The number of spaces in a tab.
   "editor.tabSize": 2,
   // Specifies workbench icon theme.
-  "workbench.iconTheme": "vscode-icons",
+  "workbench.iconTheme": "material-icon-theme",
   // vscode-icons extension will restart automatically on project detection.
   "vsicons.projectDetection.autoReload": true,
   // Format a file on save.
