--- a/config/zshrc.settings
+++ b/config/zshrc.settings
@@ -3,7 +3,6 @@
 # Path to your oh-my-zsh installation.
 export PATH=$HOME/bin:/usr/local/bin:$PATH
 export ZSH=$HOME/.oh-my-zsh
-export PATH="\$PATH:/Applications/Visual Studio Code.app/Contents/Resources/app/bin"
 
 # Set name of the theme to load. Optionally, if you set this to "random"
 # it'll load a random theme each time that oh-my-zsh is loaded.
@@ -77,7 +76,7 @@ source $ZSH/oh-my-zsh.sh
 # else
 #   export EDITOR='mvim'
 # fi
-export EDITOR="subl -w"
+export EDITOR="code"
 
 # Compilation flags
 # export ARCHFLAGS="-arch x86_64"
