--- a/config/zshrc.settings
+++ b/config/zshrc.settings
@@ -70,13 +70,8 @@ source $ZSH/oh-my-zsh.sh
 # You may need to manually set your language environment
 # export LANG=en_US.UTF-8
 
-# Preferred editor for local and remote sessions
-# if [[ -n $SSH_CONNECTION ]]; then
-#   export EDITOR='vim'
-# else
-#   export EDITOR='mvim'
-# fi
-export EDITOR="code"
+# Preferred editor
+export EDITOR="subl -w"
 
 # Compilation flags
 # export ARCHFLAGS="-arch x86_64"
