--- a/config/sublpkg.settings
+++ b/config/sublpkg.settings
@@ -5,6 +5,7 @@
     ],
     "installed_packages":
     [
+        "A File Icon",
         "Git",
         "GitGutter",
         "Markdown Extended",
