--- a/config/zshrc.settings
+++ b/config/zshrc.settings
@@ -90,3 +90,7 @@ alias path='echo -e ${PATH//:/\\n}'
 alias reload="exec ${SHELL} -l"
 #Shortcuts
 alias gh="cd ~/Dropbox/Github"
+#Useful alias
+alias python=python3
+alias pip=pip3
+
