Add SideBarEnhancements as package for Sublime Text

--- a/config/sublpkg.settings
+++ b/config/sublpkg.settings
@@ -12,6 +12,7 @@
         "MarkdownLivePreview",
         "Package Control",
         "SAS Syntax and Theme",
+        "SideBarEnhancements",
         "Tomorrow Night Italics Color Scheme"
     ]
 }
