Update settings.json (#29)

--- a/config/settings.json
+++ b/config/settings.json
@@ -67,5 +67,7 @@
   "markdown.extension.italic.indicator": "_",
   "markdown.extension.syntax.decorations": false,
   "markdown.extension.orderedList.autoRenumber": false,
-  "markdown.extension.tableFormatter.enabled": false
+  "markdown.extension.tableFormatter.enabled": false,
+  // Configure GIT
+  "git.confirmSync": false
 }
