Update settings.json (#29)

--- a/config/settings.json
+++ b/config/settings.json
@@ -71,5 +71,6 @@
   "markdown.extension.orderedList.autoRenumber": false,
   "markdown.extension.tableFormatter.enabled": false,
   // Configure GIT
-  "git.confirmSync": false
+  "git.confirmSync": false,
+  "git.enableSmartCommit": true
 }
